# GenNet

./: .gitignore  Submit_HPC_interpret_test_example.sh  Submit_HPC_test_example.sh  Submit_HPC_train_classification.sh  Submit_HPC_train_classification_filter.sh  Submit_HPC_train_regression.sh  requirements_GenNet_depreciated.txt  setup.cfg
examples/A_to_Z/: GenNet_A_to_Z.ipynb
gennet/utils/: submit_SLURM_multi_transpose.sh
