[metadata]
name = gennet
version = 2.0.0
author =  Arno van Hilten
author_email = arnovanhilten@gmail.com
description = Framework for Interpretable Neural Networks
long_description = file: README.md
long_description_content_type = text/mark/markdown
license_files = LICENSE
url = https://github.com/ArnovanHilten/GenNet

[options]
python_requires = >= 3.8
install_requires = file: requirements_GenNet.txt

[options.entry_points]
console_scripts =
    gennet=gennet.cli:main
